feat: создать ManagerSaveException встроить в FileBackedTaskManager.